--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "axios": "^1.7.9",
     "ry-edit-table": "^1.0.8",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "vuetify": "^3.7.11"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
